--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,8 @@
 //  Initialization
-* {
-    margin: 0;
-    padding: 0;
-}
+// * {
+//     margin: 0;
+//     padding: 0;
+// }
 
 // Navigation bar design
 nav {
@@ -10,7 +10,6 @@ nav {
     justify-content: space-around;
     align-items: center;
     padding: 20px 0;
-    background-color: aqua;
     ul { list-style: none; }
     img {
         height: 70px;
@@ -31,9 +30,38 @@ nav {
     a {
         color: rgb(87, 87, 87);
         padding: 0 10px;
+        text-decoration: none;
     }
     a:hover{
         color: #436313;
+        text-decoration: dotted;
+    }
+}
+
+
+// carousel
+#carousel {
+    position: relative;
+    top: 0;
+    height: 500px;
+    width: 100%;
+}
+
+// Partners
+#partners {
+    position: relative;
+    top: 100px;
+    height: 90px;
+    background-color: aqua;
+    .bubbles-group{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        img {
+            border-radius: 100%;
+            height: 50px;
+            width: 50px;
+        }
     }
 }
 
