--- a/style.css
+++ b/style.css
@@ -1,12 +1,42 @@
+body {
+  background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg.freepik.com%2Fpremium-vector%2Ffruit-vegetables-background_23-2148497077.jpg%3Fw%3D2000&f=1&nofb=1&ipt=bc242e8c41ab9fc3f8e91b930b955431bfe3ba3c331fdece910c63745d98ab53&ipo=images);
+  background-repeat: no-repeat; /* Prevent the image from repeating */
+  background-attachment: fixed; /* Make the background fixed (pinned) */
+  background-position: center; /* Center the background image */
+  background-size: 1550px 710px;	/*Ensure the image covers the entire background | width  height */
+  background-color: rgba(0, 0, 0, 0.6); /* Adjust the RGB values and alpha for transparency */
+  z-index: -1; /* Keep it behind the content */
+}
+
+/* Calligraphy styling */
+h1, h4, h6, p, a {
+  font-family: "script, pacifico";
+  font-size: 20px;
+  font-weight: 600; /* how thick letters are */
+  font-style: italic;
+}
+ul {
+  list-style: none;
+}
+
+a {
+  color: black !important;
+  padding: 0 10px;
+  text-decoration: none !important;
+}
+
+a:hover {
+  color: #0bdf03 !important;
+  -webkit-text-decoration: dotted;
+          text-decoration: dotted;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   padding: 20px 0;
   height: 110px;
-}
-nav ul {
-  list-style: none;
 }
 nav img {
   height: 70px;
@@ -22,16 +52,6 @@ nav .navBar-icons {
 }
 nav .navBar-icons li {
   padding: 0 15px;
-}
-nav a {
-  color: rgb(87, 87, 87);
-  padding: 0 10px;
-  text-decoration: none;
-}
-nav a:hover {
-  color: #0bdf03;
-  -webkit-text-decoration: dotted;
-          text-decoration: dotted;
 }
 
 .dropdown-list:hover .dropdown-content {
@@ -116,26 +136,96 @@ nav a:hover {
 #carousel {
   position: relative;
   top: 0;
-  height: 600px;
+  height: 800px;
   width: 100%;
 }
 #carousel img {
-  height: 500px;
+  height: 650px;
 }
 
+/* styling */
+#intro { 
+display: flex;
+justify-content: center;
+}
+.desc {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 470px;
+}
+
+/* fresh */
+.fresh {
+  display: flex;
+  justify-content: space-around;
+  height: 600px;
+  margin: 100px 0;
+}
+.fresh img {
+  width: 750px; /* Adjust to maintain aspect ratio */
+  height: 100%; /* Fill the height of the container */
+  object-fit: cover; /* Ensure the image covers the area */
+  object-position: right; /* Adjust which part is shown */
+  overflow: hidden; /* Hide excess parts of the image */
+  border-radius: 5%;
+}
+
+/* Customer service section */
+.customer-service {
+  display: flex;
+  justify-content: space-around;
+  height: 600px;
+  margin: 100px 0;
+}
+.customer-service img {
+  width: 750px;
+  height: 100%;
+  object-fit: cover;
+  object-position: left;
+  overflow: hidden;
+  border-radius: 5%;
+}
+
+/* Delivery */
+.delivery {
+  display: flex;
+  justify-content: space-around;
+  height: 600px;
+  margin: 100px 0;
+}
+.delivery img {
+  width: 750px;
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
+  overflow: hidden;
+  border-radius: 5%;
+}
+/* partners section */
 #partners {
   position: relative;
   top: 100px;
-  height: 90px;
-  background-color: aqua;
+  height: 100px;
+  background-color: #0bdf03;
 }
 #partners .bubbles-group {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding-top: 10px;
 }
 #partners .bubbles-group img {
   border-radius: 100%;
   height: 50px;
   width: 50px;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/* Footer design */
+.footer-bg {
+  position: relative;
+  top: 100px;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 20px;
+}
